<resources>
    <string name="app_name">Todo First</string>
    <string name="title_activity_main">Home</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="lists">Lists</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment!</string>
    <string name="hello_lists_fragment">Hello Lists Fragment!</string>
    <string name="hello_settings_fragment">Hello Settings Fragment</string>
    <string name="hello_users_fragment">Hello Users Fragment</string>
    <string name="example_title">Example Title</string>
    <string name="example_subtitle">Example subtitle</string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="category">Category:</string>
    <string name="example_description">Example description</string>
    <string name="example_author">Example author</string>
    <string name="example_category">Example category</string>
</resources>