<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      app:cnb_unselectedColor="@color/unselected_color">

    <item
        android:id="@+id/mi_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:cnb_iconColor="@color/home" />

    <item
        android:id="@+id/mi_users"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/users"
        app:cnb_iconColor="@color/users" />

    <item
        android:id="@+id/mi_lists"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/lists"
        app:cnb_iconColor="@color/lists" />

    <item
        android:id="@+id/mi_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:cnb_iconColor="@color/settings" />

    <!-- mi: Menu item -->

</menu>